유튜브 플레이리스트로 API 직접 호출해서 Sunrei 만들기 (#9)
* 크롤링 스크립트 수정

* SunreiForm 에 GoogleMapId 추가, json 으로 CreateAPI 호출하는 스크립트 작성하기

* 플레이리스트 데이터베이스에 주입하기
